# simple_config_manager

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
assets/: configs.ini
scripts/: build_executable.bat  build_package.bat  create_installer.bat  set_variables.bat
src/simple_config_manager/: configs.py  example.py  loader.py  main.py  sections.py
